k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: outalator
  labels:
    app: outalator
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: outalator
